# memory

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
config/: memory_config.yaml
docs/: architecture-review.md  backlog.md  capture-problem.md  design-capture-governance.md  design.md  discover-brief.md  intent.md  mcp-registration-discrepancies.md  memory-routing.md  pre-develop-design-patch-list.md  research-episodic-memory.md  research-synthesis.md  status.md  system-overview.md  usage.md
docs/_archive/: 2026-02-10-open-questions-research.md
docs/adf/: capabilities.md  manifest.md  memory-layer-research.md  memory-systems-deep-dive.md  plan.md  tasks.md
docs/inbox/: Agentic and Autonomous Infrastructure- A Briefing on Agentic Memory and Autonomous Infrastructure.md  Architectural Design Specification - Memory Persistence Layers for Production-Grade Agentic Systems  Beyond the Prompt - 6 Surprising Realities of Building AI Agents for 2026  Strategic Implementation Framework - Transitioning to Persistent Agentic Memory Systems  The Learner's Guide to AI Agent Memory - Keyword vs. Semantic Search  The Search for Meaning - A Learner’s Guide to AI Agent Memory Retrieval  notebooklm-memory-notes
scripts/: daily_check.py  extract_episodes.py  mcp_smoke.py  mcp_stdio_test.py  measure_capture.py  memory_maintenance.py  migrate_namespaces.py
src/memory_core/: __init__.py  config.py  models.py
tests/: conftest.py  test_config.py  test_models.py  test_scaffold_imports.py  test_usage_logger.py  test_usage_reporter.py
tests/test_access/: test_mcp_server.py  (+3 more)
(+23 files in other folders)
